--- a/.local/ProjectSettings.json
+++ b/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}","OpenedDocuments":"[\"test.xaml\",\"TimeDateTEST.xaml\",\"Main.xaml\"]"}
+{"ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}","OpenedDocuments":"[\"Main.xaml\"]"}
